CheckButton, CHeckItemContainer, ShortcutField und CheckItemAccordion

--- a/doc/einleitung.tex
+++ b/doc/einleitung.tex
@@ -24,7 +24,7 @@ Damit der Benutzer feststellen kann, warum ein Shortcut problematisch ist, solle
 
 Durchgeführt wird das Projekts in der Abteilung Entwickung, welche auch für die Umsetzung von ADITO5 zuständig war. Im Zuge der Weiterentwicklung wurde innerhab der Entwicklungsabteilung die Notwendigkeit des Editors festgestellt. Dadurch kann man die Abteilung Entwicklung selbst als Auftraggeber ihres eigenen Projekts ansehen.
 
-Die Implementierung des Editors wird in der objektorientierten Programmiersprache Java und mithilfe der Entwicklungsumgebung IntelliJ IDEA durchgeführt. Als Framework für die GUI dient das bekannte Java-Swing-Framework.
+Die Implementierung des Editors wird in der objektorientierten Programmiersprache Java und mithilfe der Entwicklungsumgebung IntelliJ IDEA durchgeführt. Als Framework für die GUI dient das Java-Swing-Framework.
 
 \subsection{Begründung}
 
