--- a/doc/CODE/CheckItemAccordion-setCheckItemGroup.tex
+++ b/doc/CODE/CheckItemAccordion-setCheckItemGroup.tex
@@ -1,14 +1,19 @@
+\begin{wrapfigure}[16]{r}[0px]{322px}
+    \centering
+	\vspace{-5px}
+	\begin{spacing}{0.75}
+		\begin{javacode}[firstnumber=62]
 public void setCheckItemGroup(ICheckItemGroup pRootGroup)
 {
   if(!Objects.equals(pRootGroup, rootGroup))
   {
     rootGroup = pRootGroup;
-
+    
     rootCheckItemContainer.setCheckItems(pRootGroup.getItems());
-
+    
     int dept = _getMaxDept(pRootGroup);
     CheckItemContainer children = rootCheckItemContainer;
-
+    
     removeAll();
     for (int i = 0; i < dept; i++)
     {
@@ -17,4 +22,8 @@ public void setCheckItemGroup(ICheckItemGroup pRootGroup)
       add(viewer);
     }
   }
-}
+}\end{javacode}
+	\end{spacing}
+	\caption{Setzten der CheckItemGroup im CheckItemAccordion}
+	\label{fig:CheckItemAccordion-setCheckItemGroup}
+\end{wrapfigure}
