--- a/doc/ressourcen.tex
+++ b/doc/ressourcen.tex
@@ -12,6 +12,7 @@
 \begin{itemize}
 \item Windows 10 Professional – Betriebssystem
 \item IntelliJ IDEA – Entwicklungsumgebung Java
+\item Java JDK - Software Developer Kit (SDK)
 \item Maven - Buildsystem
 \item git – Verteilte Versionsverwaltung
 \item MiKTeX – Distribution des Textsatzsystems \LaTeX
